--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ TZ=
 
 NEXTCLOUD_REDIS_PASSWORD=
 
+NEXTCLOUD_POSTGRES_USER=nextclouddbuser
 NEXTCLOUD_POSTGRES_PASSWORD=
 NEXTCLOUD_POSTGRES_DB=nextcloud
 
